--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="drmVideoId">5508063544001</string>
     <string name="download_button">"Download"</string>
     <string name="playlocal_button">"Play Local"</string>
-    <string name="cancel_download_button">"Cancel Download"</string>
+    <string name="delete_video_button">"Delete Video"</string>
 
 </resources>
